corrects overflow issue on mobile

--- a/src/assets/css/30-objects.styl
+++ b/src/assets/css/30-objects.styl
@@ -82,6 +82,9 @@
     display: flex;
     justify-content: space-around;
     width: 100%;
+    padding-left: 0;
+    padding-right: 0;
+    margin-left: 0;
 
     .list__itemLink {
         color: inherit;
